--- a/src/AudioVisual/AudioVisual.css
+++ b/src/AudioVisual/AudioVisual.css
@@ -21,8 +21,8 @@
 .livesessionMobile {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-	margin: 100px;
+	justify-content: start;
+	margin: 50px;
 }
 
 .textolive {
@@ -83,7 +83,6 @@
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-
 }
 
 .tituloSpot {
@@ -92,7 +91,8 @@
 }
 
 .tituloSpotMobile {
-	width: max-content;
+	width: 100px;
+	font-size: xx-large;
 	margin: 10% ;
 }
 
@@ -121,3 +121,6 @@
 	justify-content: center;
 }
 
+.videoFrazaMobile {
+
+}
