--- a/src/Contacto/Contacto.css
+++ b/src/Contacto/Contacto.css
@@ -14,6 +14,10 @@
 	display: flex;
 	justify-content: center;
 	margin-top: 20px;
+	background-color: darkgrey ;
+	
+	border-style:double;
+	
 }
 
 .formularioMobile {
@@ -26,4 +30,5 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	border-color: white;
 }
