--- a/src/Contacto/Contacto.css
+++ b/src/Contacto/Contacto.css
@@ -15,7 +15,7 @@
 	justify-content: center;
 	margin-top: 20px;
 	background-color: darkgrey ;
-	
+	margin-bottom: 200px;
 	border-style:double;
 	
 }
